Correct Thin Borders on iOS

--- a/components/ToggleSwitch.module.css
+++ b/components/ToggleSwitch.module.css
@@ -6,8 +6,14 @@
     max-width: 48px;
     margin: 0;
     position: relative;
-    border-radius: 24px;
-    border: none;
+    border-radius: 24px !important;
+    border: none !important;
+    background-color: unset !important;
+    backdrop-filter: unset !important;
+    padding: unset !important;
+    transition: .2s all ease-in-out !important;
+    font-size: unset !important;
+    cursor: pointer !important;
 }
 .toggleSwitch:hover {
     scale: 1.04;
